# web-scrapper

./: README.md  captcha_solver.py  delhi_scrapper_auto.py  delhi_scrappper.py  main.py  mock.html  mock2.html  pyproject.toml  scrapper.py  test.py
scrapper-frontend/: index.html  package-lock.json  package.json
scrapper-frontend/src/: App.jsx  api.js  constant.js
scrapper-frontend/src/components/: CaptchaPrompt.jsx  CourtSelector.jsx  LoadingSpinner.jsx  ResultDisplay.jsx  StatusDisplay.jsx
scrapper-frontend/src/hooks/: userScrapingSession.js
