[project]
name = "ecourt-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "pydantic>=2.12.3",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "selenium>=4.37.0",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.2",
]
